--- a/index.html
+++ b/index.html
@@ -1274,7 +1274,7 @@
                         <span class="contact-icon">⚡</span>
                         <span>GitHub</span>
                     </a>
-                    <a href="https://linkedin.com/in/Sirchevere" target="_blank" class="contact-link">
+                    <a href="www.linkedin.com/in/misael-yahir-flores-arispuro-86b0a0214" target="_blank" class="contact-link">
                         <span class="contact-icon">💼</span>
                         <span>LinkedIn</span>
                     </a>
