--- a/index.html
+++ b/index.html
@@ -1224,7 +1224,7 @@
                 </div>
 
                 <div class="project-card fade-in">
-                    <h3 class="project-title">JavaScript Essentials</h3>
+                    <h3 class="project-title">Algorithms & Data Structures</h3>
                     <p class="project-description">
                         Collection of JavaScript projects and exercises demonstrating core concepts and modern ES6+ features. Educational resource for JavaScript development.
                     </p>
